# opengl-fireworks

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md
assets/: VertexShader.vs
assets/audio/: README.md
assets/models/: .gitignore  README
assets/models/alduin/: LICENSE  alduin.mtl
assets/models/ground_stone/: ground_stone.mtl
assets/models/oldhouse2/: Info.txt  LICENSE.txt  oldhouse2.mtl
assets/scripts/: puppet.lua
src/: Common.hpp  Main.cpp
src/audio/: AudioManager.cpp  AudioManager.hpp  Sound.cpp  Sound.hpp  SoundId.hpp
src/core/: AssetManager.cpp  AssetManager.hpp  Game.cpp  Game.hpp  InputManager.cpp  InputManager.hpp
src/cs488/: GlErrorCheck.cpp  ShaderProgram.cpp  ShaderProgram.hpp
src/ecs/components/: Controller.hpp  Firework.hpp  ModelInstance.hpp  Physics.hpp  PointLight.cpp  PointLight.hpp  Transform.cpp  Transform.hpp  View.hpp
src/game/: FireworkManager.cpp  FireworkManager.hpp  GameLogic.cpp  GameLogic.hpp  HumanControlSystem.cpp  HumanControlSystem.hpp
src/graphics/: DisplayMode.hpp  GBuffer.cpp  GBuffer.hpp  GraphicsManager.cpp  GraphicsManager.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderContext.cpp  RenderContext.hpp  RenderFeature.hpp  RenderStage.cpp  RenderStage.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp
src/graphics/imgui/: imgui_impl_glfw_gl3.cpp
src/graphics/shaders/: CopyTexture.frag  FragmentShader.frag  GBufferDebug.frag  GeometryPass.frag  GeometryPass.vert  Light.frag  Light.vert  LightDebug.frag  LightPass.vert  NormalOut.frag  Null.frag  PostProcess.frag  ScreenVolumetricLight.frag  ShadingPass.frag  ShadowMap.frag  ShadowMap.vert  ShadowMapDebug.frag  VertexShader.vert
src/physics/: PhysicsManager.cpp  PhysicsManager.hpp
